# vampire

./: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
.claude/skills/release/: SKILL.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
docs/runbooks/: usage.md
docs/specs/: arch.md  requirements.md
scripts/: check-fast.sh  check-heavy.sh  install-hooks.sh
src/: app.rs  cache.rs  cargo.rs  config.rs  failure_log.rs  git.rs  lib.rs  main.rs  npm.rs  proxy.rs  pypi.rs  routes.rs  state.rs  stats.rs
tests/: integration.rs  real_e2e.rs
