[package]
name = "vampire"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3"
bytes = "1"
fs2 = "0.4"
futures-util = "0.3"
hex = "0.4"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["http1", "http2", "server", "tokio"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
url = "2"

[dev-dependencies]
tempfile = "3"
