[package]
name = "vampire"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[dependencies]
axum = "0.8"
bytes = "1"
hex = "0.4"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["http2", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
url = "2"

[dev-dependencies]
async-stream = "0.3"
futures-util = "0.3"
tempfile = "3"
